fix: Changed container-sub class z-index to 35 in subContainer.scss.

--- a/src/styles/components/subContainer.scss
+++ b/src/styles/components/subContainer.scss
@@ -96,7 +96,7 @@
   .container-sub{
     position: absolute;
     top: 0;
-    z-index: 10;
+    z-index: 35;
     width: 25rem;
     min-height: auto;
     max-height: 100%;
